[project]
name = "Carbon14"
version = "1.0.0"
description = "OSINT tool for estimating when a web page was written."
readme = "README.md"
authors = [
    { name = "Andrea Lazzarotto", email = "andrea.lazzarotto@gmail.com" }
]
license = "GPL-3.0"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "cssselect>=1.1.0",
    "lxml>=5.0.2",
    "pytz>=2026.1.post1",
    "requests>=2.25.1",
    "tzlocal>=2.1",
]

[project.scripts]
carbon14 = "carbon14.cli:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
